resubmission , with question explanations

--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -444,8 +444,11 @@
     "__Question 2:__ This algorithmic choice necessitates that we communicate to the user that we accept human images only when they provide a clear view of a face (otherwise, we risk having unneccessarily frustrated users!). In your opinion, is this a reasonable expectation to pose on the user? If not, can you think of a way to detect humans in images that does not necessitate an image with a clearly presented face?\n",
     "\n",
     "__Answer:__\n",
-    "\n",
-    "For this challenge LBP Cascade classifier was tested , although human positive detection fell to 88% percent, it has better job as not detecting dogs as humans with %1 percent.\n"
+    "Clear view of face is required to properly detect humans or dogs. As most of the images trained by the system contain front face, using side of face or one eye or eyes closed images will not be able to detect face. \n",
+    "Front pose is reasonable for humans, as if an mobile is created likely they will use front camera and properly show face, it is not a burden for the user.\n",
+    "In situations where clearly presented face is not available, alternative system would be to use more images of humans, where face is not clearly visible. \n",
+    "Given face detector is reasonably well, I would use this system as a secondary detection logic, first check if face is avaible, if so use standart face detector, then if not available use secondary system to see if he/she is human. Then go on with dog classifier system.\n",
+    "For alternative face detection algorithm LBP Cascade classifier was tested , although human positive detection fell to 88% percent, it has better job as not detecting dogs as humans with %1 percent.\n"
    ]
   },
   {
@@ -1438,7 +1441,9 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Obtain bottleneck features from another pre-trained CNN.\n",
@@ -1462,6 +1467,10 @@
     "__Question 5:__ Outline the steps you took to get to your final CNN architecture and your reasoning at each step.  Describe why you think the architecture is suitable for the current problem.\n",
     "\n",
     "__Answer:__ \n",
+    "Resnet 50 model was chosen. Resnet50 uses residual learning with 50 layers, where residual functions are used in n+x'th layer using input from n'th layer. Using this gives better accuracy. More layers can be used, impacting training speed. This architecture has more layers than VGG but has lower complexity.\n",
+    "Resnet architecture was especially designed for face detection so it is proper to use this architecture.\n",
+    "\n",
+    "https://arxiv.org/pdf/1512.03385.pdf\n",
     "\n"
    ]
   },
@@ -1650,7 +1659,9 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Load the model weights with the best validation loss.\n",
@@ -1712,7 +1723,9 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from ipywidgets import FloatProgress\n",
@@ -1780,7 +1793,9 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### TODO: Write your algorithm.\n",
